# handoff-forge

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
docs/: architecture.md  extending.md  getting-started.md  harness-integrations.md  limitations.md  operations.md  providers.md  schema-profiles.md  security.md  troubleshooting.md  validation.md
examples/: README.md
examples/extensions/local-notes-provider/: README.md  pyproject.toml
examples/extensions/local-notes-provider/src/handoff_forge_local_notes/: __init__.py  provider.py
examples/extensions/local-notes-provider/tests/: test_plugin.py
examples/handoffs/: project-alpha.mdc  project-beta.mdc
scripts/: check_public_repo.py  generate_demo_assets.py  verify_release_tag.py
src/handoff_forge/: __init__.py  __main__.py  application.py  cli.py  config.py  diagnostics.py  errors.py  extensions.py  models.py  security.py  storage.py
src/handoff_forge/handoffs/: __init__.py  catalog.py  composer.py  confidence.py  inventory.py  jobs.py  parser.py  profiles.py  prompts.py  validator.py
src/handoff_forge/harnesses/: __init__.py  base.py  launcher.py  lifecycle.py  platform.py  registry.py
src/handoff_forge/ingestion/: __init__.py  nodes.py
src/handoff_forge/merge/: __init__.py  conflicts.py  engine.py  planner.py
src/handoff_forge/parsing/: __init__.py  base.py  markdown.py  ocr.py  pdf.py  registry.py
src/handoff_forge/providers/: __init__.py  anthropic.py  base.py  google.py  offline.py  openai.py  registry.py  xai.py
src/handoff_forge/retrieval/: __init__.py  embeddings.py  index.py  service.py  telemetry.py
src/handoff_forge/ui/: app.py  presentation.py  state.py  workflow.py
tests/: conftest.py
tests/contract/: test_cli.py  test_extension_example.py  test_packaging.py  test_project_contract.py  test_provider_adoption.py  test_public_project.py  test_release_workflow.py
tests/e2e/: test_handoff_workbench.py
tests/fixtures/handoffs/: goal-profile.mdc  post-chat-profile.mdc  precompact-profile.mdc
tests/integration/: test_chroma_index.py  test_codex_lifecycle_adapter.py  test_end_to_end.py  test_generation_job.py  test_ingestion_atomicity.py  test_merge_workflow.py  test_multimodal_pdf.py  test_platform_actions.py  test_storage.py
tests/live/: test_destination_session.py  test_provider_smoke.py
tests/ui/: test_app.py  test_presentation.py  test_workflow.py
tests/unit/: test_application.py  test_codex_lifecycle.py  test_composer.py  test_confidence.py  test_config.py  test_diagnostics.py  test_embeddings.py  test_extensions.py  test_handoff_profiles.py  test_harness_launcher.py  test_inventory.py  test_markdown_parser.py  test_merge_engine.py  test_models.py  test_nodes.py  test_pdf_parser.py  test_provider_adapters.py  test_provider_registry.py  test_security.py
